<resources>
    <string name="app_name" translatable="false">WeatherApp</string>
    <string name="action_settings">Settings</string>
    <string name="buttonRefresh">Refresh</string>
    <string name="textview">Temperature</string>
    <string name="title">Weather in</string>
    <string name="weatherValue" translatable="false">weatherValue</string>
    <string name="wetness">Wetness</string>
    <string name="wind_speed">Wind speed</string>
    <string name="air_pressure">Air pressure</string>
    <string name="get_weather">Get weather</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_main">Weather</string>
    <string name="fragment_content_weather_icon" translatable="false">Weather icon</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle" translatable="false">nikitab@vicomlite.ru</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="nav_header_title">Nikita Boiko</string>
    <string name="about_developer">About developer</string>
    <string name="write_me">Write me</string>
</resources>
