<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <EditText
        android:id="@+id/text_city_activity_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch_wetness_activity_start"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/wetness"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_city_activity_start" />

    <Switch
        android:id="@+id/switch_wind_speed_activity_start"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/wind_speed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_wetness_activity_start" />

    <Switch
        android:id="@+id/switch_air_pressure_activity_start"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/air_pressure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_wind_speed_activity_start" />

    <Button
        android:id="@+id/button_get_weather_activity_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="onClickEvent"
        android:text="@string/get_weather"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="OnClick" />

</android.support.constraint.ConstraintLayout>